// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CPopper should render above of the trigger element 1`] = `
<div
  class="ext-growthExperiments-CPopper"
  icon="Some icon"
  iconlabel="Some label"
>
  <div
    class="ext-growthExperiments-CPopper__popover"
    style="bottom: 300px;"
    tabindex="0"
  >
    
    Some text
    
  </div>
</div>
`;

exports[`CPopper should render without a close button 1`] = `
<div
  class="ext-growthExperiments-CPopper"
>
  <div
    class="ext-growthExperiments-CPopper__popover"
    style="top: 0px;"
    tabindex="0"
  >
    
    Some text
    
  </div>
</div>
`;
